[package]
name = "autopr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
eyre = "0.6.12"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "fs", "process"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["json"] }
octocrab = "0.39.0"
tracing = "0.1.40"
once_cell = "1.19.0"
walkdir = "2.5.0"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", package = "abbs-meta-apml", rev = "4a592937b44e8bb93103edd34eff384169a3248a" }
fancy-regex = "0.13.0"
gix = { version = "0.66.0", default-features = false, features = ["revision"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
abbs-update-checksum-core = { git = "https://github.com/AOSC-Dev/abbs-update-checksum", package = "abbs-update-checksum-core", rev = "9c4d07e384b0e66d388f91ff936dc20298f9976a" }
hyper = "1.4.1"
hyper-util = "0.1.8"
tower = "0.5.1"
chrono = "0.4.38"
rand = "0.8.5"
